--- a/client/app/app.css
+++ b/client/app/app.css
@@ -1491,6 +1491,15 @@ Media query
   }
 }
 
+/* Chat box */
+.white-chat-box {
+  border-radius: 5px;
+  padding: 20px;
+  background: #fff;
+  box-shadow: 2px 2px 2px 0px #d3d3d3;
+  position: relative;
+}
+
 /* White box */
 .white-box {
   border-radius: 5px;
