--- a/client/components/layout/footer/about.html
+++ b/client/components/layout/footer/about.html
@@ -42,21 +42,28 @@
 
         <div class="row text-center">
           <h3>
-            Ensure students get the most out of their college or university experience
+            Enable in-person interactions with students around you
           </h3>
 
           <h3>
-            Enable colleges and universities to increase student engagement, retention, and graduation rates
+            Modernize your university student services
           </h3>
         </div>
 
-        <h2>Story</h2>
+        <h2>Why?</h2>
 
         <div class="row col-xs-12 col-sm-12 col-md-12 col-lg-12">
           <p style="padding-bottom: 20px">
-            We started the company in May 2014 to help renters find housing. Over time we found that we can do much more! <br>
-            After talking to many students, property owners, property managers, and universities we discovered that off-campus housing plays a critical role in student success.
-            Let's give back and build a strong foundation for the future together!
+            At UCSD I faced the same problems that many of you may be facing today - everything from RA's, student services, to meeting new people.
+            <br><br>
+            RA's have it hard - building relationships across the whole floor and planning activities to get you more involved when it's so easy to chat with high school friends or start a game of League.
+            It's overwhelming to keep on top off all the student services available to you, it's a pain to walk into the offices when you have a quick question,
+            and a reply to my email takes too long.
+            Finally meeting new students is hard - its easy for some but not everyone can strike a conversation with a random person; high school doesn't prepare you for that.
+            <br><br>
+            My goal is to make it easier for you to meet new students and get any help you need from your university student services.
+            <br><br>
+            -Vinit
           </p>
         </div>
 
@@ -79,62 +86,7 @@
               <li>UCSB and SCU</li>
             </ul>
           </div>
-          <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-            <img class="circular" src="./../../../assets/images/team/kristen.jpg" style="width: 40%">
-            <ul style="list-style: none">
-              <li><br></li>
-              <li>Kristen Llyod</li>
-              <li>UCSD</li>
-            </ul>
-          </div>
         </div>
-
-        <div class="row text-center post-padding">
-          <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-            <img class="circular" src="./../../../assets/images/team/michelle.jpg" style="width: 40%">
-            <ul style="list-style: none">
-              <li><br></li>
-              <li>Michelle Chen</li>
-              <li>SJSU</li>
-            </ul>
-          </div>
-          <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-            <img class="circular" src="./../../../assets/images/team/tawan.jpg" style="width: 40%">
-            <ul style="list-style: none">
-              <li><br></li>
-              <li>Tawan Suttamitr</li>
-              <li>SJSU</li>
-            </ul>
-          </div>
-          <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-            <img class="circular" src="./../../../assets/images/team/cisco.jpg" style="width: 40%">
-            <ul style="list-style: none">
-              <li><br></li>
-              <li>Francisco Sandoval</li>
-              <li>UCSD</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="row text-center post-padding">
-          <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-            <img class="circular" src="./../../../assets/images/team/kevin.jpg" style="width: 40%">
-            <ul style="list-style: none">
-              <li><br></li>
-              <li>Kevin Guibara</li>
-              <li>UCB</li>
-            </ul>
-          </div>
-          <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-            <img class="circular" src="./../../../assets/images/team/perjohn.jpg" style="width: 40%">
-            <ul style="list-style: none">
-              <li><br></li>
-              <li>Per John Thorenfeldt</li>
-              <li>Donski Vgs, Norway</li>
-            </ul>
-          </div>
-        </div>
-
 
       </div>
 
