--- a/client/components/layout/footer/footer.html
+++ b/client/components/layout/footer/footer.html
@@ -8,8 +8,8 @@
       </div>
       <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
         <a ui-sref="about">About</a> |
-        <a ui-sref="terms">Terms and Conditions</a> |
-        <a ui-sref="privacy">Privacy policy </a> |
+        <a ui-sref="terms">Terms</a> |
+        <a ui-sref="privacy">Privacy</a> |
         <a href="mailto:feedback@campusly.org?=Website%20Feedback" target="_top">Contact us</a>
       </div>
     </div>
