--- a/client/app/account/login/login.css
+++ b/client/app/account/login/login.css
@@ -246,7 +246,7 @@ label + label {
 }
 
 .login-header {
-  /*background: #55a5b2;*/
+  background: #333333;
   /*background: -moz-linear-gradient(top,  #55a5b2 0%, #119bad 100%);*/
   /*background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#55a5b2), color-stop(100%,#119bad));*/
   /*background: -webkit-linear-gradient(top,  #55a5b2 0%,#119bad 100%);*/
@@ -255,10 +255,10 @@ label + label {
   /*background: linear-gradient(to bottom,  #55a5b2 0%,#119bad 100%);*/
   /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#55a5b2', endColorstr='#119bad',GradientType=0 );*/
 
-  background-image:linear-gradient(
-    rgba(0, 0, 0, 0.35),
-    rgba(0, 0, 0, 0.35)
-  ), url(./../../../assets/images/jumbotron/nav.jpg);
+  /*background-image:linear-gradient(*/
+    /*rgba(0, 0, 0, 0.35),*/
+    /*rgba(0, 0, 0, 0.35)*/
+  /*), url(./../../../assets/images/jumbotron/nav.jpg);*/
 
   background-position: center;
   background-size: cover;
