--- a/client/components/layout/footer/terms.html
+++ b/client/components/layout/footer/terms.html
@@ -7,7 +7,7 @@
       <div ng-if="isLoggedIn()">
 
         <!-- Menu button only visible on login -->
-        <div ng-controller="NavbarCtrl as nav">
+        <div ng-controller="NavbarCtrl as nav" class="slider-menu-bars">
           <button class="fa fa-bars fa-2x menu-bars" ng-click="toggle()"></button>
           <div pageslide ps-open="checked" ps-side="left">
             <div class="slider-menu">
