--- a/client/app/app.css
+++ b/client/app/app.css
@@ -83,7 +83,7 @@ Proxima Nova custom font - to be used for the whole website
 ========================================================================== */
 body {
   font-family: "ProximaNova", sans-serif;
-  color: #333333;
+  color: #3b3223;
   font-size: 1em;
   -webkit-font-smoothing: subpixel-antialiased;
   text-rendering: optimizeLegibility;
@@ -232,8 +232,15 @@ Style for footer
   min-height: 200px;
 }
 
+.footer {
+  text-align: center;
+  padding: 30px 0;
+  background-color: #f2f2f2;
+}
+
 .footer  a {
-  color: #333333;
+  color: #3b3223;
+  text-decoration: none;
 }
 
 .footer .logo {
@@ -757,6 +764,7 @@ Padding for lead button
 .lead-btn{
   padding-bottom: 20px;
   padding-top: 20px;
+  text-align: center;
 }
 
 .lead-btn button {
@@ -771,11 +779,11 @@ Padding for the three marketing icons
 }
 
 .mkt-icons i {
-  color: #333333;
+
 }
 
 .mkt-icons h2 {
-  color: #333333;
+
 }
 
 /* ==========================================================================
@@ -1203,6 +1211,14 @@ ul > li {
     padding-bottom: 50px;
   }
 
+  .lead-btn button {
+    width: 100%;
+  }
+
+  .lead-btn {
+    text-align: center;
+  }
+
   .roommatesPicture {
     margin-top: 30px;
   }
@@ -1243,12 +1259,6 @@ From main.css
   text-align: center;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
   background: #4393B9;
-}
-
-.footer {
-  text-align: center;
-  padding: 30px 0;
-  border-top: 1px solid #E5E5E5;
 }
 
 
@@ -1355,7 +1365,7 @@ Dashboard styles
 div.main-wrapper {
   padding-top: 50px;
   padding-bottom: 50px;
-  background: #f5f5f5;
+  background: #f2f2f2;
   display: block;
   width: 100%;
   min-height: 600px;
@@ -1375,7 +1385,17 @@ div.main-wrapper {
 }
 
 .slider-menu h2 {
-  text-align: center;
+  text-align: left;
+  padding-left: 5%;
+}
+
+.slider-menu h2 a {
+  text-align: right;
+  padding-right: 5%;
+}
+
+.slider-menu h2 a i {
+  color: #3b3223;
 }
 
 .slider-menu ul {
@@ -1537,7 +1557,7 @@ Media query
   }
 
   .jumbotron .lead-btn {
-    margin-left: -40px;
+
   }
 
   .jumbotron .lead-img {
@@ -2440,7 +2460,7 @@ Looking Details
 
 .my-profile .about-me dl dt {
   margin-bottom: 0px;
-  color: #333333;
+  color: #3b3223;
   float: left;
   clear: left;
 }
@@ -3188,7 +3208,6 @@ a.view-all {
 }
 
 .room-detail .highlights .details .value {
-  color: #000000;
   font-weight: bold;
   border-bottom: 3px solid #f7953d;
   width: 120px;
@@ -3201,7 +3220,6 @@ a.view-all {
 }
 .room-detail .highlights .details .address {
   display: block;
-  color: #000;
   font-size: 1em;
   font-weight: bold;
 }
@@ -3252,7 +3270,6 @@ a.view-all {
 
 .room-detail .details h3 {
   font-weight: bold;
-  color: #000;
 }
 
 .room-detail .details dl.specs{
@@ -3264,7 +3281,6 @@ a.view-all {
 }
 
 .room-detail .details dl.specs dd{
-  color: #000;
   font-weight: bold;
   padding-left: 10px;
 }
@@ -3283,7 +3299,6 @@ a.view-all {
 }
 
 .address-specs dl.specs dd{
-  color: #000;
   font-weight: bold;
   padding-left: 10px;
 }
@@ -3495,12 +3510,10 @@ Unsubscribe partial styling
 .interested {
   font-weight: bold;
   opacity: 1;
-  color: #000000;
 }
 
 .not-interested {
   opacity: .4;
-  color: #000000;
 }
 
 /*
