--- a/client/components/layout/footer/about.html
+++ b/client/components/layout/footer/about.html
@@ -1,4 +1,4 @@
-<header class="login-header" ng-controller="NavbarCtrl" ng-class="{transparent: !isLoggedIn()}">
+<header class="login-header" ng-controller="NavbarCtrl">
   <div class="container">
     <div class="left-content">
       <a href="/" ng-if="!isLoggedIn()">
