--- a/client/components/layout/footer/footer.html
+++ b/client/components/layout/footer/footer.html
@@ -3,14 +3,13 @@
 
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7 logo">
-        <img src="assets/images/footer-logo.png" alt="">
-        <span class="copyright">&copy; 2015 Rented, Inc.</span>
-      </div>
-      <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
+        <a href="mailto:feedback@campusly.org?=Website%20Feedback" target="_top">Contact us</a> |
         <a ui-sref="about">About</a> |
         <a ui-sref="terms">Terms</a> |
-        <a ui-sref="privacy">Privacy</a> |
-        <a href="mailto:feedback@campusly.org?=Website%20Feedback" target="_top">Contact us</a>
+        <a ui-sref="privacy">Privacy</a>
+      </div>
+      <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
+        <span class="copyright">&copy; 2015 Rented, Inc.</span>
       </div>
     </div>
 
