--- a/client/components/layout/navbar/navbar.html
+++ b/client/components/layout/navbar/navbar.html
@@ -23,7 +23,8 @@
 
         <a ui-sref="dashboard">
           <img src="../../../assets/images/webname.png" alt="campusly" height="40px">
-          <img src="../../../assets/images/university-logos/ucdavis.png" alt="UC Davis" height="40px">
+          <!-- TODO need to load the logo of the schools dynamically -->
+          <!--<img src="../../../assets/images/university-logos/ucdavis.png" alt="UC Davis" height="40px">-->
         </a>
       </div>
 
