--- a/client/app/account/login/login.css
+++ b/client/app/account/login/login.css
@@ -324,6 +324,10 @@ label + label {
   position: relative;
 }
 
+.white-box-login .heading h2 {
+  font-weight: 400;
+}
+
 .white-box-signup {
   margin-top: 15%;
   border-radius: 5px;
