--- a/client/components/layout/navbar/navbar.html
+++ b/client/components/layout/navbar/navbar.html
@@ -7,13 +7,13 @@
       <div ng-if="isLoggedIn()">
 
         <!-- Menu button only visible on login -->
-        <div ng-controller="NavbarCtrl as nav" class="slider-menu-bars">
+        <div class="slider-menu-bars">
           <button class="fa fa-bars fa-2x menu-bars" ng-click="toggle()"></button>
           <div pageslide ps-open="checked" ps-side="left">
             <div class="slider-menu">
               <h2>Menu<a ng-click="toggle()" class="pull-right" ><i class="fa fa-times-circle small"></i></a></h2>
               <ul>
-                <a ui-sref="{{tab.sref}}" ui-sref-opts="{reload:true}" active="tab.active" disabled="tab.disabled" class="active" select="setIndex($index)" ng-repeat="tab in nav.tabs">
+                <a ui-sref="{{tab.sref}}" ui-sref-opts="{reload:true}" active="tab.active" disabled="tab.disabled" class="active" select="setIndex($index)" ng-repeat="tab in tabs">
                   <li>{{tab.title}}</li>
                 </a>
               </ul>
