Updated navbar chat icon. Updated landing page message.

--- a/client/components/layout/navbar/navbar.html
+++ b/client/components/layout/navbar/navbar.html
@@ -32,7 +32,7 @@
     <div class="right-content">
       <div id="logged" ng-if="isLoggedIn()" class="loggedIn">
         <a ui-sref="messages">
-          <i class="fa fa-envelope-o fa-2x"></i>
+          <i class="fa fa-comments-o fa-2x"></i>
           <span class="notification-counter">{{nav.notifs.pmNotif}}</span>
         </a>
       </div>
