--- a/client/components/layout/navbar/navbar.html
+++ b/client/components/layout/navbar/navbar.html
@@ -1,4 +1,4 @@
-<header class="login-header" ng-controller="NavbarCtrl" ng-class="{transparent: !isLoggedIn()}">
+<header class="login-header" ng-controller="NavbarCtrl as nav" ng-class="{transparent: !isLoggedIn()}">
   <div class="container">
     <div class="left-content">
       <a href="/" ng-if="!isLoggedIn()">
@@ -13,7 +13,7 @@
             <div class="slider-menu">
               <h2>Menu<a ng-click="toggle()" class="pull-right" ><i class="fa fa-times-circle small"></i></a></h2>
               <ul>
-                <a ui-sref="{{tab.sref}}" ui-sref-opts="{reload:true}" active="tab.active" disabled="tab.disabled" class="active" select="setIndex($index)" ng-repeat="tab in tabs">
+                <a ui-sref="{{tab.sref}}" ui-sref-opts="{reload:true}" active="tab.active" disabled="tab.disabled" class="active" select="setIndex($index)" ng-repeat="tab in nav.tabs">
                   <li>{{tab.title}}</li>
                 </a>
               </ul>
